Integrates global world design

--- a/src/SuperWorld/CSS/superworld.css
+++ b/src/SuperWorld/CSS/superworld.css
@@ -7,7 +7,7 @@ body {
 }
 
 .maincontainer {
-    background-image: url(../images/background.png);
+    background-image: url(../Images/background.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-color: #009fd7;
